fix missing margin on top

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,7 @@
 body {
   padding: 100px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin-top: 50px;
 }
 
 .top-buffer { margin-top:20px; }
